--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,10 +38,22 @@
     "# Some stats and variables that will be reused a lot\n",
     "num_of_users = purchase_data['SN'].nunique()\n",
     "\n",
+    "# Some helper methods\n",
     "def money_formatter(num):\n",
     "    return \"${:,.2f}\".format(num)\n",
     "    \n",
     "def analysis_func(grouper):\n",
+    "    '''\n",
+    "    Function for the basic anaylsis of a group\n",
+    "\n",
+    "    Parameters\n",
+    "    -----------------------\n",
+    "    grouper: The col we want to group by\n",
+    "    \n",
+    "    Returns\n",
+    "    -----------------------\n",
+    "    Retruns a dataframe with the group counts and Price means and sum\n",
+    "    '''\n",
     "    df = purchase_data.groupby(grouper).agg({grouper: 'count', \n",
     "                                                'Price': ['mean','sum', lambda x: x.sum()/x.count()]})\n",
     "    df.columns = ['Purchase Count', 'Average Purchase Price', \n",
@@ -53,34 +65,6 @@
     "\n",
     "    df[format_cols] = df[format_cols].round(2).applymap(money_formatter)\n",
     "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 780 entries, 0 to 779\n",
-      "Data columns (total 7 columns):\n",
-      "Purchase ID    780 non-null int64\n",
-      "SN             780 non-null object\n",
-      "Age            780 non-null int64\n",
-      "Gender         780 non-null object\n",
-      "Item ID        780 non-null int64\n",
-      "Item Name      780 non-null object\n",
-      "Price          780 non-null float64\n",
-      "dtypes: float64(1), int64(3), object(3)\n",
-      "memory usage: 42.7+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "purchase_data.info()"
    ]
   },
   {
@@ -99,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +170,7 @@
        "0                     780         $3.05                  780     $2,379.77"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -286,13 +270,15 @@
        "Other / Non-Disclosed            15      1.92%"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gender_df = purchase_data.groupby('Gender').agg({'Gender': 'count'})\n",
+    "\n",
+    "# Format for output\n",
     "gender_df['Percentage'] = gender_df['Gender'].apply(\n",
     "    lambda x: '{}%'.format(round(100*x/gender_df['Gender'].sum(),2)))\n",
     "gender_df.rename(columns={'Gender': 'Gender Count'})"
@@ -326,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -403,14 +389,13 @@
        "Other / Non-Disclosed               $50.19                         $3.35  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gender_analysis = analysis_func('Gender')\n",
-    "\n",
     "gender_analysis\n"
    ]
   },
