removed a few files

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -50,7 +50,7 @@
     "    -----------------------\n",
     "    grouper: The col we want to group by\n",
     "    \n",
-    "    Returns\n",
+    "    Returnsdjkfdkjf\n",
     "    -----------------------\n",
     "    Retruns a dataframe with the group counts and Price means and sum\n",
     "    '''\n",
