added some comments

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "Other / Non-Disclosed            15      1.92%"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -389,22 +389,15 @@
        "Other / Non-Disclosed               $50.19                         $3.35  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gender_analysis = analysis_func('Gender')\n",
-    "gender_analysis\n"
+    "gender_analysis"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -437,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +521,7 @@
        "40+          7      1.22%"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 136,
    "metadata": {
     "scrolled": true
    },
@@ -703,7 +696,7 @@
        "40+                             $3.08  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,13 +705,6 @@
     "age_analysis = analysis_func('Age Bin')\n",
     "age_analysis"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -749,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +815,7 @@
        "Iskadarya95                    3         $4.37          $13.10"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +974,7 @@
        "19      Pursuit, Cudgel of Necromancy                               $8.16  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 140,
    "metadata": {
     "scrolled": true
    },
@@ -1113,7 +1099,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,13 +1109,6 @@
     "most_profitable = most_profitable[format_cols].applymap(money_formatter)\n",
     "most_profitable.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
