fixed avg purchase per person calculation

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -21,13 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "from IPython.display import display, HTML\n",
     "\n",
     "# File to Load (Remember to Change These)\n",
     "file_to_load = \"Resources/purchase_data.csv\"\n",
@@ -54,8 +55,10 @@
     "    -----------------------\n",
     "    Retruns a dataframe with the group counts and Price means and sum\n",
     "    '''\n",
+    "    print(grouper)\n",
     "    df = purchase_data.groupby(grouper).agg({grouper: 'count', \n",
-    "                                                'Price': ['mean','sum', lambda x: x.sum()/x.count()]})\n",
+    "                                                'Price': ['mean','sum']})\n",
+    "    df['Avg Per Person'] = purchase_data.groupby([grouper, 'SN']).agg({'Price': 'sum'}).reset_index().groupby(grouper).agg({'Price': 'mean'})\n",
     "    df.columns = ['Purchase Count', 'Average Purchase Price', \n",
     "                           'Total Purchase Price', 'Avg Total Purchase per Person']\n",
     "\n",
@@ -65,6 +68,121 @@
     "\n",
     "    df[format_cols] = df[format_cols].round(2).applymap(money_formatter)\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                   Item Name  Price  \n",
+       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                          Frenzied Scimitar   1.56  \n",
+       "2                               Final Critic   4.88  \n",
+       "3                                Blindscythe   3.27  \n",
+       "4                                       Fury   1.44  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "purchase_data.head()"
    ]
   },
   {
@@ -83,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -123,30 +241,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
        "      <th>Number of Unique Items</th>\n",
        "      <th>Average Price</th>\n",
        "      <th>Number of Purchases</th>\n",
@@ -155,22 +258,18 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
        "      <td>780</td>\n",
        "      <td>$3.05</td>\n",
        "      <td>780</td>\n",
        "      <td>$2,379.77</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table>\n",
-       "</div>"
+       "</table>"
       ],
       "text/plain": [
-       "   Number of Unique Items Average Price  Number of Purchases Total Revenue\n",
-       "0                     780         $3.05                  780     $2,379.77"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +281,7 @@
     "total_dict['Number of Purchases'] = [purchase_data['Purchase ID'].count()]\n",
     "total_dict['Total Revenue'] = ['${:,.2f}'.format(purchase_data['Price'].sum())]\n",
     "\n",
-    "pd.DataFrame(total_dict)"
+    "display(HTML(pd.DataFrame(total_dict).to_html(index=False)))"
    ]
   },
   {
@@ -209,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +369,7 @@
        "Other / Non-Disclosed            15      1.92%"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,9 +411,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gender\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -355,21 +461,21 @@
        "      <td>113</td>\n",
        "      <td>$3.20</td>\n",
        "      <td>$361.94</td>\n",
-       "      <td>$3.20</td>\n",
+       "      <td>$4.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
        "      <td>$3.02</td>\n",
        "      <td>$1,967.64</td>\n",
-       "      <td>$3.02</td>\n",
+       "      <td>$4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Other / Non-Disclosed</th>\n",
        "      <td>15</td>\n",
        "      <td>$3.35</td>\n",
        "      <td>$50.19</td>\n",
-       "      <td>$3.35</td>\n",
+       "      <td>$4.56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -384,12 +490,12 @@
        "\n",
        "                      Total Purchase Price Avg Total Purchase per Person  \n",
        "Gender                                                                    \n",
-       "Female                             $361.94                         $3.20  \n",
-       "Male                             $1,967.64                         $3.02  \n",
-       "Other / Non-Disclosed               $50.19                         $3.35  "
+       "Female                             $361.94                         $4.47  \n",
+       "Male                             $1,967.64                         $4.07  \n",
+       "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +627,7 @@
        "40+          7      1.22%"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,11 +678,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 49,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age Bin\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -617,49 +730,49 @@
        "      <td>32</td>\n",
        "      <td>$3.40</td>\n",
        "      <td>$108.96</td>\n",
-       "      <td>$3.40</td>\n",
+       "      <td>$4.54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10-14</th>\n",
        "      <td>54</td>\n",
        "      <td>$2.90</td>\n",
        "      <td>$156.60</td>\n",
-       "      <td>$2.90</td>\n",
+       "      <td>$3.82</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15-19</th>\n",
        "      <td>200</td>\n",
        "      <td>$3.11</td>\n",
        "      <td>$621.56</td>\n",
-       "      <td>$3.11</td>\n",
+       "      <td>$4.14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20-24</th>\n",
        "      <td>325</td>\n",
        "      <td>$3.02</td>\n",
        "      <td>$981.64</td>\n",
-       "      <td>$3.02</td>\n",
+       "      <td>$4.23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25-29</th>\n",
        "      <td>77</td>\n",
        "      <td>$2.88</td>\n",
        "      <td>$221.42</td>\n",
-       "      <td>$2.88</td>\n",
+       "      <td>$3.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30-34</th>\n",
        "      <td>52</td>\n",
        "      <td>$2.99</td>\n",
        "      <td>$155.71</td>\n",
-       "      <td>$2.99</td>\n",
+       "      <td>$4.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35-39</th>\n",
        "      <td>33</td>\n",
        "      <td>$3.40</td>\n",
        "      <td>$112.35</td>\n",
-       "      <td>$3.40</td>\n",
+       "      <td>$4.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40+</th>\n",
@@ -686,17 +799,17 @@
        "\n",
        "        Avg Total Purchase per Person  \n",
        "Age Bin                                \n",
-       "<10                             $3.40  \n",
-       "10-14                           $2.90  \n",
-       "15-19                           $3.11  \n",
-       "20-24                           $3.02  \n",
-       "25-29                           $2.88  \n",
-       "30-34                           $2.99  \n",
-       "35-39                           $3.40  \n",
+       "<10                             $4.54  \n",
+       "10-14                           $3.82  \n",
+       "15-19                           $4.14  \n",
+       "20-24                           $4.23  \n",
+       "25-29                           $3.75  \n",
+       "30-34                           $4.21  \n",
+       "35-39                           $4.32  \n",
        "40+                             $3.08  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +928,7 @@
        "Iskadarya95                    3         $4.37          $13.10"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +1087,7 @@
        "19      Pursuit, Cudgel of Necromancy                               $8.16  "
       ]
      },
-     "execution_count": 139,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 53,
    "metadata": {
     "scrolled": true
    },
@@ -1099,7 +1212,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 140,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
