added analysis to notebook and cleaned up some files.

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -4,10 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Heroes Of Pymoli Data Analysis\n",
-    "* Of the 1163 active players, the vast majority are male (84%). There also exists, a smaller, but notable proportion of female players (14%).\n",
+    "## Heroes Of Pymoli Data Analysis\n",
+    "### Gender\n",
+    "* Of the 576 Active users the vast majority are Male (83.59%) vs Female (14.49%).\n",
+    "* Notably Females spend more money per user and buy more expensive games.\n",
+    "### Age\n",
+    "* The most users are in the 20-24 age group (56.42%) or the 15-19 age group (34.72%)\n",
+    "* 20-24 purchases more expensive games with higher totals per person.\n",
+    "* Interestingly, Both Under 10 and 35-39 buy expensive games yeilding big per user totals. Overall volume is relatively low.\n",
+    "### Popularity\n",
+    "* Oathbreaker is the most popular game by volume and revenue.\n",
+    "* Due to the relative similarity in purchase price, **volume** is the bigger driver of **revenue**.\n",
     "\n",
-    "* Our peak age demographic falls between 20-24 (44.8%) with secondary groups falling between 15-19 (18.60%) and 25-29 (13.4%).  \n",
     "-----"
    ]
   },
@@ -21,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +79,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Player Count"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -96,124 +111,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th>SN</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Number of Users</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Lisim78</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>108</td>\n",
-       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
-       "      <td>3.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Lisovynya38</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>143</td>\n",
-       "      <td>Frenzied Scimitar</td>\n",
-       "      <td>1.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ithergue48</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>92</td>\n",
-       "      <td>Final Critic</td>\n",
-       "      <td>4.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Chamassasya86</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Blindscythe</td>\n",
-       "      <td>3.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Iskosia90</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>131</td>\n",
-       "      <td>Fury</td>\n",
-       "      <td>1.44</td>\n",
+       "      <th>576</th>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
-       "0            0        Lisim78   20   Male      108   \n",
-       "1            1    Lisovynya38   40   Male      143   \n",
-       "2            2     Ithergue48   24   Male       92   \n",
-       "3            3  Chamassasya86   24   Male      100   \n",
-       "4            4      Iskosia90   23   Male      131   \n",
-       "\n",
-       "                                   Item Name  Price  \n",
-       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
-       "1                          Frenzied Scimitar   1.56  \n",
-       "2                               Final Critic   4.88  \n",
-       "3                                Blindscythe   3.27  \n",
-       "4                                       Fury   1.44  "
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [576]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "purchase_data.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Player Count"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Display the total number of players\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The total number of users is: 576\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"The total number of users is: {}\".format(num_of_users))"
+    "pd.DataFrame({'Number of Users': [num_of_users]}).set_index('Number of Users')"
    ]
   },
   {
@@ -224,24 +147,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Run basic calculations to obtain number of unique items, average price, etc.\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display the summary data frame\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +178,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -292,23 +199,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Percentage and Count of Male Players\n",
-    "\n",
-    "\n",
-    "* Percentage and Count of Female Players\n",
-    "\n",
-    "\n",
-    "* Percentage and Count of Other / Non-Disclosed\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +261,7 @@
        "Other / Non-Disclosed            15      1.92%"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,26 +284,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Run basic calculations to obtain purchase count, avg. purchase price, avg. purchase total per person etc. by gender\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display the summary data frame"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +369,7 @@
        "Other / Non-Disclosed               $50.19                         $4.56  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,31 +387,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Establish bins for ages\n",
-    "\n",
-    "\n",
-    "* Categorize the existing players using the age bins. Hint: use pd.cut()\n",
-    "\n",
-    "\n",
-    "* Calculate the numbers and percentages by age group\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Optional: round the percentage column to two decimal points\n",
-    "\n",
-    "\n",
-    "* Display Age Demographics Table\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -627,7 +483,7 @@
        "40+          7      1.22%"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -809,7 +665,7 @@
        "40+                             $3.08  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,25 +686,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Run basic calculations to obtain the results in the table below\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Sort the total purchase value column in descending order\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display a preview of the summary data frame\n",
-    "\n"
+    "Top 5 biggest spenders based on Total Purchases\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +771,7 @@
        "Iskadarya95                    3         $4.37          $13.10"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,29 +797,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Retrieve the Item ID, Item Name, and Item Price columns\n",
-    "\n",
-    "\n",
-    "* Group by Item ID and Item Name. Perform calculations to obtain purchase count, item price, and total purchase value\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Sort the purchase count column in descending order\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display a preview of the summary data frame\n",
+    "Top 5 most items by **volume**\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "code_folding": []
+   },
    "outputs": [],
    "source": [
     "# Create general popular aggregation\n",
@@ -986,14 +816,15 @@
     "popular_df.reset_index(level='Price', inplace=True)\n",
     "\n",
     "# Set up cols for formatting\n",
-    "format_cols = ['Price', 'Total Purchase Price']\n",
-    "ordered_cols = ['Purchase Count', 'Price', 'Total Purchase Price']"
+    "format_cols = ['Price', 'Total Purchase Price']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 46,
+   "metadata": {
+    "code_folding": []
+   },
    "outputs": [
     {
      "data": {
@@ -1087,13 +918,14 @@
        "19      Pursuit, Cudgel of Necromancy                               $8.16  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Sort by most purchases\n",
+    "ordered_cols = ['Purchase Count', 'Price', 'Total Purchase Price']\n",
     "popular_items = popular_df[ordered_cols].sort_values('Purchase Count', ascending=False)\n",
     "popular_items[format_cols] = popular_items[format_cols].applymap(money_formatter)\n",
     "popular_items.head()"
@@ -1110,19 +942,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Sort the above table by total purchase value in descending order\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display a preview of the data frame\n",
-    "\n"
+    "Top 5 Items based on **revenue**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {
     "scrolled": true
    },
@@ -1149,12 +974,14 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>Price</th>\n",
        "      <th>Total Purchase Price</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Purchase Count</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Item ID</th>\n",
        "      <th>Item Name</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -1163,65 +990,79 @@
        "    <tr>\n",
        "      <th>178</th>\n",
        "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
-       "      <td>$4.23</td>\n",
        "      <td>$50.76</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>82</th>\n",
        "      <th>Nirvana</th>\n",
-       "      <td>$4.90</td>\n",
        "      <td>$44.10</td>\n",
+       "      <td>$4.90</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>145</th>\n",
        "      <th>Fiery Glass Crusader</th>\n",
-       "      <td>$4.58</td>\n",
        "      <td>$41.22</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>92</th>\n",
        "      <th>Final Critic</th>\n",
-       "      <td>$4.88</td>\n",
        "      <td>$39.04</td>\n",
+       "      <td>$4.88</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>103</th>\n",
        "      <th>Singed Scalpel</th>\n",
-       "      <td>$4.35</td>\n",
        "      <td>$34.80</td>\n",
+       "      <td>$4.35</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                      Price  \\\n",
-       "Item ID Item Name                                             \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm  $4.23   \n",
-       "82      Nirvana                                       $4.90   \n",
-       "145     Fiery Glass Crusader                          $4.58   \n",
-       "92      Final Critic                                  $4.88   \n",
-       "103     Singed Scalpel                                $4.35   \n",
+       "                                                     Total Purchase Price  \\\n",
+       "Item ID Item Name                                                           \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76   \n",
+       "82      Nirvana                                                    $44.10   \n",
+       "145     Fiery Glass Crusader                                       $41.22   \n",
+       "92      Final Critic                                               $39.04   \n",
+       "103     Singed Scalpel                                             $34.80   \n",
        "\n",
-       "                                                     Total Purchase Price  \n",
-       "Item ID Item Name                                                          \n",
-       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
-       "82      Nirvana                                                    $44.10  \n",
-       "145     Fiery Glass Crusader                                       $41.22  \n",
-       "92      Final Critic                                               $39.04  \n",
-       "103     Singed Scalpel                                             $34.80  "
+       "                                                      Price  Purchase Count  \n",
+       "Item ID Item Name                                                            \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm  $4.23              12  \n",
+       "82      Nirvana                                       $4.90               9  \n",
+       "145     Fiery Glass Crusader                          $4.58               9  \n",
+       "92      Final Critic                                  $4.88               8  \n",
+       "103     Singed Scalpel                                $4.35               8  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "most_profitable = popular_df.sort_values('Total Purchase Price', ascending=False)\n",
-    "most_profitable = most_profitable[format_cols].applymap(money_formatter)\n",
+    "# Sort by most revenue\n",
+    "ordered_cols = ['Total Purchase Price', 'Price', 'Purchase Count']\n",
+    "most_profitable = popular_df[ordered_cols].sort_values('Total Purchase Price', ascending=False)\n",
+    "most_profitable[format_cols] = most_profitable[format_cols].applymap(money_formatter)\n",
     "most_profitable.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
